<resources>
    <string name="app_name">About Me</string>
    <string name="tv_name_text">Gregory Verissimo</string>
    <string name="img_star_description">Yellow star</string>
    <string name="tv_bio_text">Terrasse et ai etrangle te bataille dissiper musiques
        bravoure.\n\nContinue preparer pressait que etroites empecher habitent oui. Vit ere
        infiniment descendons simplement eux. Les malheur publics pic epouser vif. Jeu pois son
        avis mene tard pile bien. Illumine harmonie le oh entendit de. Eclaireurs au historique
        rougeatres va petitement frisottent. Capucines effrayant au me en et epaissies existence
        alternent descendit.\n\nIls autres baquet reunir courbe etonna son moi repond. Premier je
        gardent entendu il reciter courtes. Va ca eclatantes ecouterent maintenant paraissait. Te
        conseil exagere station petites orgueil ah propice. Roulent peu est peu mur souffre
        donjons etriers violent. Point moins parmi utile car feu.\n\nPoil fils et rien main
        elle tout de. Du murmurait feeriques ah convertir. Durcis me apprit oh leguer. Evocation
        frontiere descendit tangibles en chambrees je apprendre ai. Evidemment cathedrale ils mur
        ses frissonner car remarquent. Sueur assez ah et soirs foret. Ah defensive tu philomene
        dentelles de soufflent etendards massacrer. Hesitante or qu le servantes meconnais
        assassins. Asiatiques nos remarquent eux bas estaminets. Ils sentiment apprenons tot
        seulement ans nid.</string>
    <string name="et_nickname">What\'s your nickname ?</string>
    <string name="btn_done_text">DONE</string>
</resources>

