<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/padding"
    android:paddingEnd="@dimen/padding"
    android:paddingBottom="@dimen/padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_name"
        style="@style/tv_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_name_text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_done_text" />

    <TextView
        android:id="@+id/tv_nickname"
        style="@style/tv_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/img_my"
        android:layout_marginBottom="@dimen/img_my"
        android:contentDescription="@string/img_star_description"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/scroll_bio"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_bio"
            style="@style/tv_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/tv_bio_text" />
    </ScrollView>
</LinearLayout>